# OpenCV-ARTK

./: .gitignore  README.md
opencv_ar/: ARMarkerNFT.h  CMakeCache.txt  CMakeLists.txt  Makefile  ar_toolkit.h  main.cpp  opencv_ar  opencv_artoolkit_main.cpp  trackingSub.c  utility.h
opencv_ar/DataNFT/Test/: stones.fset  stones.fset3  stones.iset
